# myuux

./: AGENTS.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: alembic.ini  pydantic.py  pyproject.toml  requirements.txt  sqlmodel.py
backend/alembic/: env.py
backend/alembic/versions/: 20261201_000001_initial_schema.py  20261202_000002_app_tables.py
backend/app/: agent_foundation.py  db.py  main.py  models.py  schemas.py
backend/app/api/: conversations.py  files.py  runs.py  workspaces.py
backend/app/services/: content_service.py  conversation_service.py  file_service.py  openai_runner.py  storage.py
backend/fastapi/: __init__.py  responses.py  testclient.py
backend/scripts/: codex_checks.py
backend/tests/: test_agent_foundation.py  test_api.py  test_branching_mvp.py  test_codex_checks.py  test_file_service.py  test_http_conversation_runs.py  test_openai_runner_and_storage.py  test_refactor_stabilization.py  test_sqlmodel_stub.py
docs/: artifact-first-workspace.md
frontend/: eslint.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentTab.tsx  ChatPane.tsx  ConversationSidebar.tsx  FilesTab.tsx  ResultsTab.tsx  SummariesTab.tsx  WorkbenchTabs.tsx
frontend/lib/: api.test.ts  api.ts
