[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myuux-backend"
version = "0.1.0"
description = "Artifact-first Workspace API"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "sqlmodel==0.0.22",
  "python-multipart==0.0.17",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.7.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
